--- a/hugo.toml
+++ b/hugo.toml
@@ -37,17 +37,7 @@ languageCode = "pt-br"
     url = "labs/"
     weight = 20
 
-  [[menu.main]]
-    identifier = "arquitetura"
-    name = "Arquitetura"
-    url = "arquitetura/"
-    weight = 30
-
-  [[menu.main]]
-    identifier = "devops"
-    name = "DevOps"
-    url = "devops/"
-    weight = 40
+  # Arquitetura/DevOps removidos do menu por enquanto
 
 
 [params.profileMode]
