--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ languageCode = "pt-br"
   feedTitle = "Últimos artigos"
   feedLinkLabel = "Ver todos"
   feedLinkUrl = "posts/"
-  feedButtonLabel = "Carregar mais"
+  feedButtonLabel = "Ver todos"
   feedButtonUrl = "posts/"
 
 [menu]
@@ -30,7 +30,23 @@ languageCode = "pt-br"
     url = "posts/"
     weight = 10
 
-  # Labs removido do menu por enquanto
+  [[menu.main]]
+    identifier = "arquitetura"
+    name = "Arquitetura"
+    url = "posts/?cat=arquitetura"
+    weight = 20
+
+  [[menu.main]]
+    identifier = "cloud"
+    name = "Cloud"
+    url = "posts/?cat=cloud"
+    weight = 30
+
+  [[menu.main]]
+    identifier = "devops"
+    name = "DevOps"
+    url = "posts/?cat=devops"
+    weight = 40
 
   # Arquitetura/DevOps removidos do menu por enquanto
 
