--- a/hugo.toml
+++ b/hugo.toml
@@ -73,4 +73,4 @@ languageCode = "pt-br"
 
   [[params.profileMode.buttons]]
     name = "Arquitetura"
-    url = "arquitetura/"
+    url = "categories/arquitetura/"
